@@ -37,6 +37,7 @@ ToDo/Notes:
 	- Limit name length in fs/ntfs/unistr.c::ntfs_nlstoucs() to maximum
 	  allowed by NTFS, i.e. 255 Unicode characters, not including the
 	  terminating NULL (which is not stored on disk).
+	- Improve comments on file attribute flags in fs/ntfs/layout.h.
 
 2.1.26 - Minor bug fixes and updates.
 
